@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.romario.opensudoku"
-      android:versionName="1.1.0" android:versionCode="1100">
+      android:versionName="1.1.0" 
+      android:versionCode="1100"
+      android:installLocation="auto"
+      >
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
     <application android:icon="@drawable/opensudoku" android:label="@string/app_name">
         <activity android:name=".gui.FolderListActivity"
