@@ -8,15 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-4
-# apk configurations. This property allows creation of APK files with limited
-# resources. For example, if your application contains many locales and
-# you wish to release multiple smaller apks instead of a large one, you can
-# define configuration to create apks with limited language sets.
-# Format is a comma separated list of configuration names. For each
-# configuration, a property will declare the resource configurations to
-# include. Example:
-#     apk-configurations=european,northamerica
-#     apk-config-european=en,fr,it,de,es
-#     apk-config-northamerica=en,es
+target=android-8
 apk-configurations=
